--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   </svg>
                 </span>Соглашаюсь с рассылкой и принимаю&nbsp;<a href="">Условия договора</a></label>
               </div>
-              <button type="submit"class="modal-btn form-button">Отправить</button>
+              <button class="modal-btn form-button" type="submit">Отправить</button>
             </form>
           </div>
         </div>
